# Bugs_life

./: .gitignore  CMakeLists.txt  README.md  bugs.txt  compile  life_history.txt
src/header/: Bug.h  Controls.hpp  Crawler.h  DiagonalBug.h  Display.hpp  Game.h  Grid.hpp  Hopper.h  Node.hpp  SuperBug.h
src/source/: Bug.cpp  Controls.cpp  Crawler.cpp  DiagonalBug.cpp  Display.cpp  Game.cpp  Grid.cpp  Hopper.cpp  Node.cpp  SuperBug.cpp  main.cpp
